# riscv-vm

./: Cargo.toml  justfile  linker.ld  program.S  program.asm
src/: constants.rs  cpu.rs  main.rs  monitored_allocator.rs  monitored_memory.rs  utils.rs
src/app/: mod.rs
