[package]
name = "riscv-vm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bytesize = "2.0.1"
clap = { version = "4.5.45", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
derive_more = { version = "2.0.1", features = ["full"] }
env_logger = "0.11.8"
goblin = "0.10.1"
log = "0.4.27"
macroquad = "0.4.14"
memmap2 = "0.9.7"
paste = "1.0.15"
static_assertions = "1.1.0"
